--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=80
 
 #mariadb server connect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.url=jdbc:mariadb://61.74.225.3/2team
 spring.datasource.username=root
-spring.datasource.password=qwer
+spring.datasource.password=kor123
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.enabled=true
